--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -1,5 +1,26 @@
 <section id="sobre-mi" class="container my-5">
-    <h3 class="text-center mb-4">Sobre mí</h3>
+    <header class="intro container">
+        <div class="row align-items-center">
+            <div class="col-md-4 text-center">
+                <img src="assets/img/jpeg/fotoPerfil.jpeg" alt="Foto de perfil de Rubén Aldonza Cejudo" class="profile-pic img-fluid" />    
+            </div>
+            <div class="col-md-8">
+                <h1>¡Hola! Soy Rubén Aldonza Cejudo</h1>
+                <p class="mt-1 text-gray">
+                    Desarrollador web <span class="text-highlight">Fullstack</span> con React, Angular y Django
+                </p>
+            </div>
+        </div>
+    </header>
+
+    <div class="container text-center mt-4">
+        <p> 
+            Soy desarrollador web, centrado en el Frontend, ¡pero hago de todo! Puedes encontrarme en <a href="mailto:ruben.machado1920@gmail.com" class="text-highlight">{{ email }}</a> y en <a href="https://linkedin.com/in/rubén-aldonza-cejudo-414bb7142" class="text-highlight">LinkedIn</a>.
+        </p>
+        <a href="assets/pdf/RubénAldonzaCejudo_CV.pdf" download="Mi_CV" class="btn btn-success mt-3">
+            Descargar CV
+        </a>
+    </div>
 
     <p>
         En 2024, terminé el Grado Superior en Desarrollo de Aplicaciones Web, en el IES Hermanos Machado. Durante mis prácticas en FISEVI, dentro del Hospital Virgen del Rocío pero más concretamente en el Instituto de Biomedicina de Sevilla (IBIS), adquirí una valiosa experiencia como Desarrollador de Aplicaciones.
