--- a/src/styles.css
+++ b/src/styles.css
@@ -27,6 +27,10 @@
     --shadow-color: rgba(255, 255, 255, 0.1);
 }
 
+html {
+    scroll-behavior: smooth !important;
+}  
+
 body::-webkit-scrollbar {
     width: 8px;
 }
