Actualizar estilos de transición y animación en el componente Home: Ajustar estilos de sección "Sobre mí" y tarjetas de habilidades

--- a/src/styles.css
+++ b/src/styles.css
@@ -317,6 +317,10 @@ section {
     margin-bottom: 15px;
 }
 
+.logos img:hover, .logos svg:hover {
+    transform: scale(1.5);
+}
+
 footer {
     width: calc(100% - 2rem);
     padding: 2rem 0;
