Actualizar estilos de navegación y sección "Sobre mí" en el componente Home

--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -17,7 +17,7 @@
         <p> 
             Soy desarrollador web, centrado en el Frontend, ¡pero hago de todo! Puedes encontrarme en <a href="mailto:ruben.machado1920@gmail.com" class="text-highlight">{{ email }}</a> y en <a href="https://linkedin.com/in/rubén-aldonza-cejudo-414bb7142" class="text-highlight">LinkedIn</a>.
         </p>
-        <a href="assets/pdf/RubénAldonzaCejudo_CV.pdf" download="Mi_CV" class="btn btn-success mt-3">
+        <a href="assets/pdf/RubénAldonzaCejudo_CV.pdf" download="Mi_CV" class="btn btn-download-cv mt-3">
             Descargar CV
         </a>
     </div>
