--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
-<!-- Menú de navegación con Bootstrap -->
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+<!-- Menú de navegación con fondo translúcido -->
+<nav class="navbar navbar-expand-lg custom-navbar fixed-top">
   <div class="container">
     <a class="navbar-brand" href="#">Mi Portfolio</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
