Actualizar estructura del componente Home: Ajustar diseño de sección "Proyectos" en el archivo projects.component.html

--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,7 +1,7 @@
 <h3 class="text-center mb-4">Explora algunos de mis proyectos en vivo</h3>
 
 <div class="row row-cols-1 row-cols-md-2 g-4">
-    <div class="col">
+    <div class="col-12 col-md-4">
         <div class="card h-100">
             <img src="assets/img/png/proyectoMarvel.png" class="card-img-top" alt="Marvel Project">
             <div class="card-body">
@@ -28,7 +28,7 @@
         </div>
     </div>
 
-    <div class="col">
+    <div class="col-12 col-md-4">
         <div class="card h-100">
             <img src="assets/img/png/proyectoBootstrap&CSS.png" class="card-img-top" alt="Bootstrap and CSS Project">
             <div class="card-body">
@@ -51,7 +51,7 @@
         </div>
     </div>
 
-    <div class="col">
+    <div class="col-12 col-md-4">
         <div class="card h-100">
             <img src="assets/img/png/proyectoGestordeContactos.png" class="card-img-top" alt="Gestor contactos project">
             <div class="card-body">
@@ -81,7 +81,7 @@
         </div>
     </div>
 
-    <div class="col">
+    <div class="col-12 col-md-4">
         <div class="card h-100">
             <img src="assets/img/png/Rock-Paper-Scissor.png" class="card-img-top" alt="Rock-Paper-Scissor">
             <div class="card-body">
