--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,7 +1,22 @@
-<footer class="footer">
-    <span class="footerLinks">
-        <a href="mailto:ruben.machado1920@gmail.com">Contacto</a>
-        <a href="https://linkedin.com/in/rubén-aldonza-cejudo-414bb7142">LinkedIn</a>
-    </span>
-    <span>&#169;2024. Rubén Aldonza Cejudo</span>
+<footer class="footer py-4 mt-5 border-top">
+    <div class="container text-center">
+        <div class="row">
+            <div class="col-12 col-md-6 mb-2 mb-md-0">
+                <span class="footerLinks d-flex justify-content-center justify-content-md-start">
+                    <a href="mailto:ruben.machado1920@gmail.com" class="text-decoration-none mx-2">
+                        <i class="bi bi-envelope"></i> Contacto
+                    </a>
+                    <a href="https://linkedin.com/in/rubén-aldonza-cejudo-414bb7142" target="_blank" class="text-decoration-none mx-2">
+                        <i class="bi bi-linkedin"></i> LinkedIn
+                    </a>
+                    <a href="https://github.com/Rubencito2002" target="_blank" class="text-decoration-none mx-2">
+                        <i class="bi bi-github"></i> GitHub
+                    </a>
+                </span>
+            </div>
+            <div class="col-12 col-md-6 text-md-end">
+                <span>&#169;2024. Rubén Aldonza Cejudo</span>
+            </div>
+        </div>
+    </div>
 </footer>
