--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -11,6 +11,9 @@
           <a class="nav-link" href="#aboutSection">Sobre mí</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" href="#certificationSection">Certificaciones y Logros</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="#projectsSection">Proyectos</a>
         </li>
         <!-- <li class="nav-item">
@@ -24,6 +27,12 @@
 <section class="aboutSection py-5" id="aboutSection">
   <div class="container">
     <app-skills></app-skills>
+  </div>
+</section>
+
+<section class="certificationSection py-5" id="certificationSection">
+  <div class="container">
+    <app-certifications></app-certifications>
   </div>
 </section>
 
