--- a/src/app/certifications/certifications.component.html
+++ b/src/app/certifications/certifications.component.html
@@ -8,7 +8,7 @@
     
     <div class="row">
         <div *ngFor="let certification of certifications" class="col-md-6 col-lg-4 col-xl-4 mb-4">
-            <div class="card h-100 shadow-sm">
+            <div class="card h-100">
                 <div class="card-body">
                     <h5 class="card-title">{{ certification.title }}</h5>
                     <ul>
