--- a/src/app/certifications/certifications.component.html
+++ b/src/app/certifications/certifications.component.html
@@ -2,7 +2,10 @@
     <h3 class="section-title text-center">Certificaciones y Logros</h3>
     <div class="text-center">
         <p> 
-            Puedes ver todos mis certificado en mi perfil de <a href="https://linkedin.com/in/rubén-aldonza-cejudo-414bb7142" class="text-highlight">LinkedIn</a> pero aqui muestro los más principales.
+            Puedes ver todos mis certificado en mi perfil de <a href="https://linkedin.com/in/rubén-aldonza-cejudo-414bb7142" class="text-highlight" target="_blank">LinkedIn</a> pero aqui muestro los más principales.
+        </p>
+        <p> 
+            Tambien tengo unos logros que consegui en <a href="https://learn.microsoft.com/en-us/users/rubnaldonza-1457/" class="text-highlight" target="_blank">Microsoft</a> mediante un challenge de skills.
         </p>
     </div>
     
