--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -129,4 +129,30 @@
             </div>
         </div>
     </div>
+
+    <div class="col-12 col-md-4">
+        <div class="card h-100">
+            <img src="assets/img/png/conversor-moneda.png" class="card-img-top" alt="Rock-Paper-Scissor">
+            <div class="card-body">
+                <h5 class="card-title">Calculadora de IMC con Bootstrap</h5>
+                <p class="card-text">Aplicación web que calcula el Índice de Masa Corporal (IMC) a partir del peso y la altura ingresados, mostrando el resultado en una interfaz limpia y estilizada con Bootstrap.</p>
+                <div class="techList mb-2">
+                    <span class="badge bg-success">
+                        <i class="bi bi-filetype-js"></i> JavaScript
+                    </span>
+                    <span class="badge bg-success">
+                        <i class="bi bi-bootstrap"></i> Bootstrap
+                    </span>
+                </div>
+                <div class="d-flex justify-content-between">
+                    <a href="https://conversor-moneda-iota.vercel.app/" target="_blank" class="btn btn-outline-primary">
+                        <i class="bi bi-link-45deg"></i> Proyecto
+                    </a>
+                    <a href="https://github.com/Rubencito2002/conversor-moneda" target="_blank" class="btn btn-outline-secondary">
+                        <i class="bi bi-code-slash"></i> Código
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
