Actualizar diseño y contenido del componente Projects: Cambiar título y descripción del proyecto "Calculadora de IMC con Bootstrap" a "Conversor de Moneda en Tiempo Real"

--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -134,8 +134,8 @@
         <div class="card h-100">
             <img src="assets/img/png/conversor-moneda.png" class="card-img-top" alt="Rock-Paper-Scissor">
             <div class="card-body">
-                <h5 class="card-title">Calculadora de IMC con Bootstrap</h5>
-                <p class="card-text">Aplicación web que calcula el Índice de Masa Corporal (IMC) a partir del peso y la altura ingresados, mostrando el resultado en una interfaz limpia y estilizada con Bootstrap.</p>
+                <h5 class="card-title">Conversor de Moneda en Tiempo Real</h5>
+                <p class="card-text">Convierte cantidades entre diferentes monedas utilizando tasas de cambio actualizadas al instante.</p>
                 <div class="techList mb-2">
                     <span class="badge bg-success">
                         <i class="bi bi-filetype-js"></i> JavaScript
