--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,35 +1,35 @@
-<h3 class="text-center mb-4">Explora algunos de mis proyectos en vivo</h3>
+    <h3 class="text-center mb-4">Explora algunos de mis proyectos en vivo</h3>
 
-<!-- Filtros -->
+    <!-- Filtros -->
 <div class="d-flex justify-content-center mb-4">
     <button class="btn btn-outline-primary me-2" (click)="filterProjects('all')">Todos</button>
-    <button class="btn btn-outline-primary me-2" (click)="filterProjects('React')">React</button>
-    <button class="btn btn-outline-primary me-2" (click)="filterProjects('Bootstrap')">Bootstrap</button>
-    <button class="btn btn-outline-primary me-2" (click)="filterProjects('JavaScript')">JavaScript</button>
+    <button *ngFor="let tech of technologies" class="btn btn-outline-primary me-2" (click)="filterProjects(tech)">
+        {{ tech }}
+    </button>
 </div>
 
-<!-- Lista de Proyectos Filtrados -->
-<div class="row row-cols-1 row-cols-md-2 g-4">
-    <div class="col-12 col-md-4" *ngFor="let project of filteredProjects">
-        <div class="card h-100">
-            <img [src]="project.image" class="card-img-top" [alt]="project.title">
-            <div class="card-body">
-                <h5 class="card-title">{{ project.title }}</h5>
-                <p class="card-text">{{ project.description }}</p>
-                <div class="techList mb-2">
-                    <span *ngFor="let tech of project.technologies" class="badge bg-success me-1">
-                        {{ tech }}
-                    </span>
-                </div>
-                <div class="d-flex justify-content-between">
-                    <a [href]="project.link" target="_blank" class="btn btn-outline-primary">
-                        <i class="bi bi-link-45deg"></i> Proyecto
-                    </a>
-                    <a [href]="project.code" target="_blank" class="btn btn-outline-secondary">
-                        <i class="bi bi-code-slash"></i> Código
-                    </a>
+    <!-- Lista de Proyectos Filtrados -->
+    <div class="row row-cols-1 row-cols-md-2 g-4">
+        <div class="col-12 col-md-4" *ngFor="let project of filteredProjects">
+            <div class="card h-100">
+                <img *ngIf="project.image" [src]="project.image" class="card-img-top" [alt]="project.title">
+                <div class="card-body">
+                    <h5 class="card-title">{{ project.title }}</h5>
+                    <p class="card-text">{{ project.description }}</p>
+                    <div class="techList mb-2">
+                        <span *ngFor="let tech of project.technologies" class="badge bg-success me-1">
+                            {{ tech }}
+                        </span>
+                    </div>
+                    <div class="d-flex justify-content-between">
+                        <a *ngIf="project.link" [href]="project.link" target="_blank" class="btn btn-outline-primary">
+                            <i class="bi bi-link-45deg"></i> Proyecto
+                        </a>
+                        <a [href]="project.code" target="_blank" class="btn btn-outline-secondary">
+                            <i class="bi bi-code-slash"></i> Código
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
