Actualizar diseño y contenido del componente Home: Agregar sección de Recursos Recomendados en home.component.html y home.component.ts

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -16,6 +16,9 @@
         <li class="nav-item">
           <a class="nav-link" href="#projectsSection">Proyectos</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#resourceSection">Mis Recomendaciones</a>
+        </li>
         <!-- <li class="nav-item">
           <a class="nav-link" href="#contactoSection">Contacto</a>
         </li> -->
@@ -39,6 +42,12 @@
 <section class="projectsSection py-5" id="projectsSection">
   <div class="container">
     <app-projects></app-projects>
+  </div>
+</section>
+
+<section class="resourceSection py-5" id="resourceSection">
+  <div class="container">
+    <app-resources></app-resources>
   </div>
 </section>
   
