--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -38,6 +38,7 @@
                         <img src="assets/img/svg/bootstrap.svg" alt="Bootstrap logo" class="img-fluid" style="max-height: 50px;">
                         <img src="assets/img/svg/react.svg" alt="React logo" class="img-fluid" style="max-height: 50px;">
                         <img src="assets/img/svg/angular.svg" alt="Angular logo" class="img-fluid" style="max-height: 50px;">
+                        <img src="assets/img/png/typescript.png" alt="Typescript logo" class="img-fluid" style="max-height: 50px;">
                     </div>
                 </div>
             </div>
