Actualizar archivo .vercel\project.json

--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -69,6 +69,7 @@
                         <img src="assets/img/png/visualstudiocode.png" alt="Visual Studio Code logo" class="img-fluid" style="max-height: 50px;">
                         <img src="assets/img/png/eclipse.png" alt="Eclipse IDE logo" class="img-fluid" style="max-height: 50px;">
                         <img src="assets/img/png/git.png" alt="Git logo" class="img-fluid" style="max-height: 50px;">
+                        <img src="assets/img/png/vercel.png" alt="Vercel logo" class="img-fluid" style="max-height: 50px;">
                     </div>
                 </div>
             </div>
